isolation HttpResponse structures
