# docs/swagger.json
@@ -4,9 +4,9 @@
         "contact": {}
     },
     "paths": {
-        "/users/register": {
+        "/api/users/register/": {
             "post": {
-                "description": "Send otp to user",
+                "description": "register user",
                 "consumes": [
                     "application/json"
                 ],
@@ -16,10 +16,10 @@
                 "tags": [
                     "Users"
                 ],
-                "summary": "Send otp to user",
+                "summary": "register user",
                 "parameters": [
                     {
-                        "description": "GetOtpRequest",
+                        "description": "ًRegister User",
                         "name": "Request",
                         "in": "body",
                         "required": true,
@@ -38,13 +38,13 @@
                     "400": {
                         "description": "Failed",
                         "schema": {
-                            "$ref": "#/definitions/helper.BaseHttpResponse"
+                            "$ref": "#/definitions/helper.BaseHttpResponseWithValidationError"
                         }
                     },
-                    "409": {
+                    "406": {
                         "description": "Failed",
                         "schema": {
-                            "$ref": "#/definitions/helper.BaseHttpResponse"
+                            "$ref": "#/definitions/helper.BaseHttpResponseWithError"
                         }
                     }
                 }
@@ -85,7 +85,31 @@
         "helper.BaseHttpResponse": {
             "type": "object",
             "properties": {
+                "result": {},
+                "statusCode": {
+                    "type": "integer"
+                },
+                "success": {
+                    "type": "boolean"
+                }
+            }
+        },
+        "helper.BaseHttpResponseWithError": {
+            "type": "object",
+            "properties": {
                 "error": {},
+                "result": {},
+                "statusCode": {
+                    "type": "integer"
+                },
+                "success": {
+                    "type": "boolean"
+                }
+            }
+        },
+        "helper.BaseHttpResponseWithValidationError": {
+            "type": "object",
+            "properties": {
                 "result": {},
                 "statusCode": {
                     "type": "integer"
